--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -9,20 +9,46 @@ body {
 }
 
 .wrap {
-  display: flex;
   margin-top: 100px;
-  align-content: center;
-  justify-content: center;
+}
+
+.wrap__input {
+  width: 100%;
+  text-align: center;
+  > .input {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    max-width: 600px;
+  }
+}
+
+#loading {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
 
 #input {
-  max-width: 500px;
   width: 100%;
   background: #fff;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
   border: 0;
   outline: 0;
   font: inherit;
-  padding: 10px 20px;
+  padding: 15px 20px;
   height: 60px;
 }
+
+.website__wrap {
+  max-width: 800px;
+  margin: 100px auto 0;
+}
+
+.hide {
+  display: none !important;
+}
+
+@import "css/loading";
